# ZephyrSetup

./: .gitignore  README.md  build.sh  combine_compile_commands.sh
app_m4/: CMakeLists.txt  app.overlay
app_m4/src/: main.c
app_m7/: CMakeLists.txt
app_m7/src/: main.c
shared/include/: shared_buffer.h
